[gd_scene load_steps=8 format=3 uid="uid://dm3mgcdspc851"]

[ext_resource type="Script" path="res://scripts/interactable_objects/classroom_door.gd" id="1_2ti44"]
[ext_resource type="PhysicsMaterial" uid="uid://cplha4jwcmqqx" path="res://materials/physics_materials/enviroment/wall_physics_material.tres" id="1_5f5tu"]
[ext_resource type="PackedScene" uid="uid://dsqdhouiy102q" path="res://scenes/interface_nodes/interactable.tscn" id="1_jlp11"]
[ext_resource type="Material" uid="uid://che12idocard0" path="res://materials/shader_materials/outline_shader.tres" id="3_8kd2l"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e8dkl"]
next_pass = ExtResource("3_8kd2l")
albedo_color = Color(1, 0.490196, 0.117647, 1)

[sub_resource type="BoxMesh" id="BoxMesh_x17ah"]
material = SubResource("StandardMaterial3D_e8dkl")
size = Vector3(1.5, 3, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_e20hl"]
size = Vector3(1.5, 3, 0.2)

[node name="ClassroomDoor" type="StaticBody3D"]
collision_mask = 0
physics_material_override = ExtResource("1_5f5tu")
script = ExtResource("1_2ti44")
_scene_to_load = "res://scenes/rooms/test_room_2.tscn"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("BoxMesh_x17ah")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_e20hl")

[node name="Interactable" parent="." instance=ExtResource("1_jlp11")]
is_show_description_info = false
object_name = "Test Room 2"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interactable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_e20hl")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]
